k8s/system/traefik/lily/resources/custom-error-pages/resources/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: custom-error-pages

spec:
  errors:
    query: /{status}.html
    service:
      name: custom-error-pages
      port: 80
    status:
      - 403-404
      - "429"
      - "500"
      - 502-503
