k8s/system/traefik/lily/resources/custom-error-pages/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-error-pages

spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-error-pages
  template:
    metadata:
      labels:
        app: custom-error-pages
    spec:
      containers:
        - name: app
          image: guillaumebriday/traefik-custom-error-pages@sha256:12751f98b8f67a657aa03d0c8a7fe4977dc279fb53b669ee9d7a3dfc9528cd5e
          ports:
            - containerPort: 80
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
